--- a/index.css
+++ b/index.css
@@ -1,6 +1,16 @@
 body {
-    background-color: teal;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    background-image: url();
+    background-image: linear-gradient(240deg, rgb(46, 46, 141), rgb(38, 38, 184), rgb(90, 90, 192), rgb(116, 116, 199), white);
+    cursor: default;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#pag-princ p {
+    font-size: 120%;
 }
 
 #barra-lateral {
@@ -22,19 +32,19 @@ body {
 }
 
 .links-principal {
-    color: lightseagreen;
+    color: #B47CF7;
     text-decoration: underline overline;
     text-decoration-style: wavy;
-    text-decoration-color: yellow;
+    text-decoration-color: violet;
     transition-duration: 1s;
 }
 
 .links-principal:hover {
-    color: yellow;
+    color: violet;
     letter-spacing: 2px;
     text-decoration: underline overline;
     text-decoration-style: wavy;
-    text-decoration-color: lightseagreen;
+    text-decoration-color: #B47CF7;
     transition-duration: 1s;
 }
 
@@ -46,15 +56,19 @@ div#barra-lateral > p:last-child {
     margin-bottom: 60%;
 }
 
+div#barra-lateral [class=links-barra] {
+    text-decoration: none;
+}
+
 .links-barra {
     padding: 2px;
-    color: green;
+    color: rgba(129, 142, 145, 0.884);
     transition-duration: 1s;
 }
 
 div > .links-barra:not(#principal):hover {
     border-style: none none solid none;
-    border-color: green;
+    border-color: rgba(129, 142, 145, 0.884);
     border-width: 1px;
 }
 
@@ -65,6 +79,15 @@ div > .links-barra:not(#principal):hover {
 
 a {
     text-decoration: none;
+}
+
+.publi {
+    position: fixed;
+    bottom: 0%;
+    border-style: solid solid none solid;
+    border-color: black;
+    border-width: 1px;
+    transform: translateY(5px);
 }
 
 #conteudo {
@@ -79,33 +102,47 @@ a {
     align-self: center;
 }
 
-#link-contato {
-    color:black;
-    background-color: white;
-    padding: 3px;
+div#publi2 a {
+    text-transform: uppercase;
+    color: rgba(0, 0, 0, 0.767);
+    text-decoration: violet underline;
+    text-decoration-color: violet;
 }
 
-#link-equipe {
-    color:black;
-    background-color: white;
-    padding: 3px;
+div#publi2 > p {
+    grid-area: texto;
+    margin-right: 15px;
+    text-align: justify;
 }
+
+div#publi2 > img {
+    grid-area: publi;
+    border: black 1px solid;
+}
+
+#publi2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas: "texto texto texto publi";
+}
+
+/* PÁGINA DE CONTATO */
 
 .formulario {
     text-align: center;
 }
 
-/* PÁGINA DE CONTATO */
-
 fieldset {
     border-color: black;
+    margin-left: 16vw;
+    margin-right: 16vw;
 }
 
 legend {
     border-width: 2px;
     border-style: none solid none solid;
     border-color: black;
-    background-color: rgba(0, 150, 150, 0.5);
+    background-color: rgba(255, 255, 255, 0.05);
     font-size: 130%;
     font-weight: 500;
 }
@@ -121,6 +158,10 @@ legend {
 #opcoes li {
     list-style: none;
     justify-self: flex-start;
+}
+
+textarea {
+    resize: none;
 }
 
 button {
@@ -173,18 +214,18 @@ button {
 button:hover {
     animation: background 4s linear 0s infinite;
     color: white;
+    cursor: pointer;
 }
 
 /* EQUIPE */
 
 .equipe {
     text-align: center;
-    
 }
 
 .grid-equipe > img {
     grid-area: img;
-    border: 3px solid brown;
+    border: 3px solid rgb(99, 46, 99);
     border-radius: 100%;
     margin: 0;
 }
